:astronaut: [ADD] COMPONENTES

--- a/client/src/components/landig_page/LandingPage.astro
+++ b/client/src/components/landig_page/LandingPage.astro
@@ -8,6 +8,7 @@ import RoleSelector from "./RoleSelector.astro";
 import ProductsSection from "./ProductsSection.astro";
 import InstructivIASection from "./InstructivIASection.astro";
 import Popular from "./Popular.astro";
+import Footer from "../Footer.astro";
 ---
 
 {/* HERO */}
@@ -19,11 +20,15 @@ import Popular from "./Popular.astro";
 {/* RS */}
 <RoleSelector />
 
-{/* PRS */}
+{/* PRS 
 <ProductsSection />
+*/}
 
 {/* IAS */}
 <InstructivIASection />
 
 {/* POP */}
 <Popular />
+
+{/* FTR */}
+<Footer />
