--- a/client/src/components/landig_page/Hero.astro
+++ b/client/src/components/landig_page/Hero.astro
@@ -10,7 +10,7 @@ import LogoCarousel from './LogoCarousel.astro';
 <section class="relative w-full rounded-2xl overflow-hidden bg-black text-white border border-white">
     <!-- Imagen / Fondo -->
     <div
-        class="absolute inset-0 bg-[url('./assets/backgrounds/B1.svg')] bg-cover bg-center brightness-85 blur-sm"
+        class="absolute inset-0 bg-[url('/assets/backgrounds/B1.svg')] bg-cover bg-center brightness-95 blur-sm"
     ></div>
     <div class="absolute inset-0 bg-gradient-to-b from-black/40 to-black/60"></div>
 
@@ -20,11 +20,11 @@ import LogoCarousel from './LogoCarousel.astro';
         <Navbar />
 
         <!-- Sección principal con texto e imagen -->
-        <div class="flex flex-col md:flex-row items-center justify-between w-full max-w-8xl text-left gap-12">
+        <div class="flex flex-col md:flex-row items-center justify-between w-full max-w-7xl text-left gap-12">
             <!-- Contenedor de texto, línea y búsqueda -->
             <div class="flex-1 flex flex-col items-start">
                 <!-- Texto principal -->
-                <h1 class="text-5xl md:text-9xl font-extrabold leading-tight">
+                <h1 class="text-5xl md:text-7xl font-extrabold leading-tight">
                     APRENDE MÁS,<br />
                     <span class="text-transparent stroke-white font-extrabold italic outline-text">
                         MÁS RÁPIDO
@@ -41,7 +41,7 @@ import LogoCarousel from './LogoCarousel.astro';
                     <input
                         type="text"
                         placeholder="Buscar"
-                        class="w-full rounded-lg pl-4 pr-12 py-3 bg-white/20 border border-white/40 text-white placeholder-white/60 focus:outline-none focus:ring-2 focus:ring-blue-400"
+                        class="w-full rounded-lg pl-4 pr-12 py-3 bg-white/20 border border-white/40 text-white placeholder-white/60 focus:outline-none focus:ring-2 focus:ring-[#cc9900]"
                     />
                     <button class="absolute right-3 top-1/2 -translate-y-1/2">
                         <Search className="w-5 h-5 text-white" />
@@ -52,14 +52,15 @@ import LogoCarousel from './LogoCarousel.astro';
             <!-- Contenedor del logo -->
             <div class="flex justify-center items-center">
                 <img
-                    src="./assets/logos/L0.svg"
+                    src="./assets/favicon.svg"
                     alt="Logo Hero"
-                    class="w-100 md:w-80 lg:w-100"
+                    class="w-50 md:w-80 lg:w-130"
                 />
             </div>
         </div>
     </div>
 
-    <!-- Carrusel de logos como componente externo -->
+    <!-- Carrusel de logos como componente externo
     <LogoCarousel />
+    -->
 </section>
