--- a/client/src/components/landig_page/InstructivIASection.astro
+++ b/client/src/components/landig_page/InstructivIASection.astro
@@ -3,7 +3,7 @@ const robot = "./assets/icons/IIA.svg";
 ---
 
 <section
-    class="w-full mt-12 bg-[#4115df] rounded-2xl p-8 flex flex-col md:flex-row items-center justify-between overflow-hidden"
+    class="w-full mt-12 bg-[#cc9900] rounded-2xl p-8 flex flex-col md:flex-row items-center justify-between overflow-hidden"
 >
     <div>
         <h2 class="text-7xl font-bold text-white">
