--- a/client/src/components/landig_page/Navbar.astro
+++ b/client/src/components/landig_page/Navbar.astro
@@ -22,8 +22,8 @@ import { UserRound, ChevronDown, SquareChevronRight } from "lucide-react";
     <!-- Enlaces centrados (desktop) -->
     <div class="hidden md:flex flex-1 justify-center">
         <div class="flex items-center gap-8 lg:gap-10 text-md font-medium">
-            <a href="#" class="hover:underline transition-colors">Inicio</a>
-            <a href="#" class="hover:underline transition-colors">Nosotros</a>
+            <a href="/" class="hover:underline transition-colors">Inicio</a>
+            <a href="/construccion" class="hover:underline transition-colors">Nosotros</a>
             <div class="relative group">
                 <button class="flex items-center gap-1 hover:underline transition-colors">
                     CAI
@@ -34,18 +34,20 @@ import { UserRound, ChevronDown, SquareChevronRight } from "lucide-react";
                 <div
                     class="absolute hidden group-hover:block bg-white text-black rounded-lg p-2 shadow-lg w-50 z-50"
                 >
-                    <a href="#" class="block px-3 py-1 hover:bg-gray-100 rounded transition-colors">Cursos</a>
-                    <a href="#" class="block px-3 py-1 hover:bg-gray-100 rounded transition-colors">Laboratorios</a>
+                    <a href="/error" class="block px-3 py-1 hover:bg-gray-100 rounded transition-colors">Cursos</a>
+                    <a href="/error" class="block px-3 py-1 hover:bg-gray-100 rounded transition-colors">Laboratorios</a>
                 </div>
             </div>
-            <a href="#" class="hover:underline transition-colors">Contacto</a>
+            <a href="/construccion" class="hover:underline transition-colors">Contacto</a>
         </div>
     </div>
 
     <!-- Icono usuario -->
     <div class="ml-auto md:ml-0">
         <button class="p-2 rounded-full border border-white/50 hover:bg-white/10 transition">
-            <UserRound className="w-5 h-5 md:w-6 md:h-6 text-white" />
+            <a href="/iniciar-sesion">
+                <UserRound className="w-5 h-5 md:w-6 md:h-6 text-white" />
+            </a>
         </button>
     </div>
 
