:astronaut: [ADD] PAGINAS

--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/Layout.astro';
 import LandingPage from '../components/landig_page/LandingPage.astro';
 ---
 
-<Layout title="Instructiva | El mejor sistema CAI de habla hispana.">
+<Layout title="GITSe | Instructiva">
 	{/* LP */}
 	<LandingPage />
 </Layout>
