--- a/client/src/pages/welcome.astro
+++ b/client/src/pages/welcome.astro
@@ -41,17 +41,17 @@ import LogoutBtn from "../components/LogoutBtn.astro";
       // Configuración de imágenes según el rol
       const roleImages = {
         admin: "/assets/imgRoles/Kirby.png",
-        profesor: "/assets/imgRoles/Profesor.png",
-        estudiante: "/assets/imgRoles/Alumno.png",
+        profesor: "/assets/imgRoles/Profesor.svg",
+        estudiante: "/assets/imgRoles/Alumno.svg",
         pepino: "/assets/imgRoles/Pepinillo.png",
       };
 
       // Colores de fondo según el rol
       const roleColors = {
-        admin: "from-red-500 to-orange-500",
-        profesor: "from-blue-500 to-purple-500",
-        estudiante: "from-green-500 to-teal-500",
-        pepino: "from-green-600 to-lime-400",
+        admin: "from-red-800 to-rose-500",
+        profesor: "from-blue-900 to-purple-500",
+        estudiante: "from-blue-800 to-amber-500",
+        pepino:"from-green-500 to-teal-500",
       };
 
       // @ts-ignore
@@ -68,11 +68,11 @@ import LogoutBtn from "../components/LogoutBtn.astro";
             <p class="text-xl mt-4 opacity-90">${user.welcomeMessage}</p>
 					</div>
 
-					<div class="p-8">
+					<div class="p-8 justify-items-center">
 						<img 
 							src="${userImage}" 
 							alt="${user.welcomeTitle}"
-							class="w-full h-80 object-cover rounded-xl shadow-lg"
+							class="max-w-dvh h-80 object-cover rounded-xl shadow-lg"
 						/>
 					</div>
 				</div>
