--- a/client/src/components/landig_page/Hero.astro
+++ b/client/src/components/landig_page/Hero.astro
@@ -10,7 +10,7 @@ import LogoCarousel from './LogoCarousel.astro';
 <section class="relative w-full rounded-2xl overflow-hidden bg-black text-white border border-white">
     <!-- Imagen / Fondo -->
     <div
-        class="absolute inset-0 bg-[url('/assets/backgrounds/B1.svg')] bg-cover bg-center brightness-95 blur-sm"
+        class="absolute inset-0 bg-[url('/assets/backgrounds/B1.png')] bg-cover bg-center brightness-95 blur-sm"
     ></div>
     <div class="absolute inset-0 bg-gradient-to-b from-black/40 to-black/60"></div>
 
